update contentController and sideBarController, fixed icon alignment on sidebar

--- a/src/styles.css
+++ b/src/styles.css
@@ -93,6 +93,7 @@ header {
 
 img.icon {
 	height: 49px;
+	margin-left: auto;
 
 }
 
